--- a/billing/templates/despesa.html
+++ b/billing/templates/despesa.html
@@ -61,9 +61,9 @@
 
             {% if despesa %}  
                 {% if despesa.id %}  
-                    <h4 class="mt-4">Preencha os dados abaixo para editar a despesa</h4>
+                    <h4 class="mt-4">Preencher os dados abaixo para editar a despesa</h4>
                 {% else %}
-                    <h4 class="mt-4">Preencha os dados abaixo para cadastrar uma nova despesa</h4>
+                    <h4 class="mt-4">Preencher os dados abaixo para cadastrar uma nova despesa</h4>
                 {% endif %} 
                 <div class="border rounded p-3 mb-5">
                     <form 
@@ -76,7 +76,7 @@
                         <div class="border rounded p-3">
                             <div class="form-row">
                                 <div class="form-group col-md-4">
-                                    <label for="inputValor" class="font-weight-bold">Valor (R$)</label>
+                                    <label for="inputValor" class="font-weight-bold">Valor em R$ </label>
                                     <input type="number" step='0.01' placeholder='0.00' class="form-control" id="inputValor" name="valor" value="{{despesa.valor}}" required>
                                 </div>
                                 <div class="form-group col-md-4">
@@ -99,11 +99,11 @@
                             </div>
                             <div class="form-row mt-2">
                                 <div class="form-group col-md-3">
-                                    <label for="inputDtVencimento" class="font-weight-bold">Data de vencimento</label>
+                                    <label for="inputDtVencimento" class="font-weight-bold">Data de Vencimento</label>
                                     <input type="date" class="form-control" id="inputDtVencimento" name="data_vencimento" value="{{despesa.data_vencimento}}">
                                 </div>
                                 <div class="form-group col-md-3">
-                                    <label for="selectFormaPagamento" class="font-weight-bold">Forma de pagamento</label>
+                                    <label for="selectFormaPagamento" class="font-weight-bold">Forma de Pagamento</label>
                                     <select class="form-control" id="selectFormaPagamento" name="formaPagamento">
                                         {% for item in formasPagamento %}
                                             <option 
@@ -129,7 +129,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group col-md-3">
-                                    <label for="inputDtPagamento" class="font-weight-bold">Data de pagamento</label>
+                                    <label for="inputDtPagamento" class="font-weight-bold">Data de Pagamento</label>
                                     <input type="date" class="form-control" id="inputDtPagamento" name="data_pagamento" value="{{despesa.data_pagamento}}">
                                 </div>
                             </div>
